[package]
name = "struct_morph"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a (proc) macro for morphing one struct into another."
authors = ["shrynx <shriyansbhatnagar@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
